deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imptfc
spec:
  selector:
    matchLabels:
      app: imptfc
  replicas: 1
  template:
    metadata:
      labels:
        app: imptfc
    spec:
#      nodeSelector:
#        kubernetes.io/hostname: sd-origin
      containers:
      - image: javimosch/imptfc:prod
        imagePullPolicy: IfNotPresent
        name: imptfc
        ports:
        - containerPort: 8080
        command: ["npm","run","start"]
        workingDir: /app
---
apiVersion: v1
kind: Service
metadata:
  name: imptfc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: imptfc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imptfc
  annotations:
    kubernetes.io/ingress.class: "public"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - mfc.misitioba.com
    secretName: imptfc-secret-tls
  rules:
  - host: mfc.misitioba.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: imptfc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imptfc-prod
  annotations:
    kubernetes.io/ingress.class: "public"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - play.mufc.fr
    secretName: imptfc-prod-secret-tls
  rules:
  - host: play.mufc.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: imptfc
            port:
              number: 80
